--- a/torch_techniques.ipynb
+++ b/torch_techniques.ipynb
@@ -366,9 +366,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
    "source": [
-    "<img src=\"pictures_and_plots/relu_pic.png\" alt=\"Пример изображения\" width=\"800\">"
+    "![ReLU plots](pictures_and_plots/relu_pic.png)"
    ]
   },
   {
@@ -468,7 +472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"pictures_and_plots/elu_pic.png\" alt=\"Пример изображения\" width=\"800\">"
+    "![ELU plots](pictures_and_plots/elu_pic.png)"
    ]
   },
   {
@@ -620,7 +624,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"pictures_and_plots/tanh_pic.png\" alt=\"Пример изображения\" width=\"800\">"
+    "![TanH plots](pictures_and_plots/tanh_pic.png)"
    ]
   },
   {
