--- a/torch_techniques.ipynb
+++ b/torch_techniques.ipynb
@@ -372,7 +372,7 @@
     }
    },
    "source": [
-    "![ReLU plots](pictures_and_plots/relu_pic.png)"
+    "![ReLU plots](./pictures_and_plots/relu_pic.png)"
    ]
   },
   {
@@ -472,7 +472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![ELU plots](pictures_and_plots/elu_pic.png)"
+    "![ELU plots](./pictures_and_plots/elu_pic.png)"
    ]
   },
   {
@@ -624,7 +624,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![TanH plots](pictures_and_plots/tanh_pic.png)"
+    "![TanH plots](./pictures_and_plots/tanh_pic.png)"
    ]
   },
   {
